--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,13 +28,13 @@ jobs:
             case ${BRANCH} in
               "main" | "master" )
                   if [ -n "${{ secrets.LATEST }}" ] ; then
-                    if [ "${RELEASE}-slim" = "${{ secrets.LATEST }}" ]; then
-                      BRANCHTAG="${DOCKER_IMAGE}:${RELEASE}-slim,${DOCKER_IMAGE}:${RELEASE}-slim-latest,${DOCKER_IMAGE}:latest"
+                    if [ "${RELEASE}" = "${{ secrets.LATEST }}" ]; then
+                      BRANCHTAG="${DOCKER_IMAGE}:${RELEASE},${DOCKER_IMAGE}:${RELEASE}-latest,${DOCKER_IMAGE}:latest"
                     else
-                      BRANCHTAG="${DOCKER_IMAGE}:${RELEASE}-slim,${DOCKER_IMAGE}:${RELEASE-latest}"
+                      BRANCHTAG="${DOCKER_IMAGE}:${RELEASE},${DOCKER_IMAGE}:${RELEASE-latest}"
                     fi
                   else
-                     BRANCHTAG="${DOCKER_IMAGE}:${RELEASE}-slim,${DOCKER_IMAGE}:${RELEASE}-slim-latest"
+                     BRANCHTAG="${DOCKER_IMAGE}:${RELEASE},${DOCKER_IMAGE}:${RELEASE}-latest"
                   fi
                 ;;
               "develop" )
@@ -55,7 +55,7 @@ jobs:
           fi
 
           if [[ $GITHUB_REF == refs/tags/* ]]; then
-            GITTAG="${DOCKER_IMAGE}:$(echo $GITHUB_REF | sed 's|refs/tags/||g')_${RELEASE}-slim"
+            GITTAG="${DOCKER_IMAGE}:$(echo $GITHUB_REF | sed 's|refs/tags/||g')_${RELEASE}"
           fi
 
           if [ -n "${BRANCHTAG}" ] && [ -n "${GITTAG}" ]; then
@@ -107,7 +107,7 @@ jobs:
       - name: Switch
         id: Switch
         run: |
-          sed -i "s|FROM debian:.*|FROM debian:${RELEASE}-slim|g" Dockerfile
+          sed -i "s|FROM debian:.*|FROM debian:${RELEASE}|g" Dockerfile
 
       - name: Build
         uses: docker/build-push-action@v2
@@ -136,13 +136,13 @@ jobs:
             case ${BRANCH} in
               "main" | "master" )
                   if [ -n "${{ secrets.LATEST }}" ] ; then
-                    if [ "${RELEASE}-slim" = "${{ secrets.LATEST }}" ]; then
-                      BRANCHTAG="${DOCKER_IMAGE}:${RELEASE}-slim,${DOCKER_IMAGE}:${RELEASE}-slim-latest,${DOCKER_IMAGE}:latest"
+                    if [ "${RELEASE}" = "${{ secrets.LATEST }}" ]; then
+                      BRANCHTAG="${DOCKER_IMAGE}:${RELEASE},${DOCKER_IMAGE}:${RELEASE}-latest,${DOCKER_IMAGE}:latest"
                     else
-                      BRANCHTAG="${DOCKER_IMAGE}:${RELEASE}-slim,${DOCKER_IMAGE}:${RELEASE-latest}"
+                      BRANCHTAG="${DOCKER_IMAGE}:${RELEASE},${DOCKER_IMAGE}:${RELEASE-latest}"
                     fi
                   else
-                     BRANCHTAG="${DOCKER_IMAGE}:${RELEASE}-slim,${DOCKER_IMAGE}:${RELEASE}-slim-latest"
+                     BRANCHTAG="${DOCKER_IMAGE}:${RELEASE},${DOCKER_IMAGE}:${RELEASE}-latest"
                   fi
                 ;;
               "develop" )
@@ -163,7 +163,7 @@ jobs:
           fi
 
           if [[ $GITHUB_REF == refs/tags/* ]]; then
-            GITTAG="${DOCKER_IMAGE}:$(echo $GITHUB_REF | sed 's|refs/tags/||g')_${RELEASE}-slim"
+            GITTAG="${DOCKER_IMAGE}:$(echo $GITHUB_REF | sed 's|refs/tags/||g')_${RELEASE}"
           fi
 
           if [ -n "${BRANCHTAG}" ] && [ -n "${GITTAG}" ]; then
@@ -215,7 +215,7 @@ jobs:
       - name: Switch
         id: Switch
         run: |
-          sed -i "s|FROM debian:.*|FROM debian:${RELEASE}-slim|g" Dockerfile
+          sed -i "s|FROM debian:.*|FROM debian:${RELEASE}|g" Dockerfile
 
       - name: Build
         uses: docker/build-push-action@v2
@@ -244,13 +244,13 @@ jobs:
             case ${BRANCH} in
               "main" | "master" )
                   if [ -n "${{ secrets.LATEST }}" ] ; then
-                    if [ "${RELEASE}-slim" = "${{ secrets.LATEST }}" ]; then
-                      BRANCHTAG="${DOCKER_IMAGE}:${RELEASE}-slim,${DOCKER_IMAGE}:${RELEASE}-slim-latest,${DOCKER_IMAGE}:latest"
+                    if [ "${RELEASE}" = "${{ secrets.LATEST }}" ]; then
+                      BRANCHTAG="${DOCKER_IMAGE}:${RELEASE},${DOCKER_IMAGE}:${RELEASE}-latest,${DOCKER_IMAGE}:latest"
                     else
-                      BRANCHTAG="${DOCKER_IMAGE}:${RELEASE}-slim,${DOCKER_IMAGE}:${RELEASE-latest}"
+                      BRANCHTAG="${DOCKER_IMAGE}:${RELEASE},${DOCKER_IMAGE}:${RELEASE-latest}"
                     fi
                   else
-                     BRANCHTAG="${DOCKER_IMAGE}:${RELEASE}-slim,${DOCKER_IMAGE}:${RELEASE}-slim-latest"
+                     BRANCHTAG="${DOCKER_IMAGE}:${RELEASE},${DOCKER_IMAGE}:${RELEASE}-latest"
                   fi
                 ;;
               "develop" )
@@ -271,7 +271,7 @@ jobs:
           fi
 
           if [[ $GITHUB_REF == refs/tags/* ]]; then
-            GITTAG="${DOCKER_IMAGE}:$(echo $GITHUB_REF | sed 's|refs/tags/||g')_${RELEASE}-slim"
+            GITTAG="${DOCKER_IMAGE}:$(echo $GITHUB_REF | sed 's|refs/tags/||g')_${RELEASE}"
           fi
 
           if [ -n "${BRANCHTAG}" ] && [ -n "${GITTAG}" ]; then
@@ -323,7 +323,7 @@ jobs:
       - name: Switch
         id: Switch
         run: |
-          sed -i "s|FROM debian:.*|FROM debian:${RELEASE}-slim|g" Dockerfile
+          sed -i "s|FROM debian:.*|FROM debian:${RELEASE}|g" Dockerfile
 
       - name: Build
         uses: docker/build-push-action@v2
@@ -352,13 +352,13 @@ jobs:
             case ${BRANCH} in
               "main" | "master" )
                   if [ -n "${{ secrets.LATEST }}" ] ; then
-                    if [ "${RELEASE}-slim" = "${{ secrets.LATEST }}" ]; then
-                      BRANCHTAG="${DOCKER_IMAGE}:${RELEASE}-slim,${DOCKER_IMAGE}:${RELEASE}-slim-latest,${DOCKER_IMAGE}:latest"
+                    if [ "${RELEASE}" = "${{ secrets.LATEST }}" ]; then
+                      BRANCHTAG="${DOCKER_IMAGE}:${RELEASE},${DOCKER_IMAGE}:${RELEASE}-latest,${DOCKER_IMAGE}:latest"
                     else
-                      BRANCHTAG="${DOCKER_IMAGE}:${RELEASE}-slim,${DOCKER_IMAGE}:${RELEASE-latest}"
+                      BRANCHTAG="${DOCKER_IMAGE}:${RELEASE},${DOCKER_IMAGE}:${RELEASE-latest}"
                     fi
                   else
-                     BRANCHTAG="${DOCKER_IMAGE}:${RELEASE}-slim,${DOCKER_IMAGE}:${RELEASE}-slim-latest"
+                     BRANCHTAG="${DOCKER_IMAGE}:${RELEASE},${DOCKER_IMAGE}:${RELEASE}-latest"
                   fi
                 ;;
               "develop" )
@@ -379,7 +379,7 @@ jobs:
           fi
 
           if [[ $GITHUB_REF == refs/tags/* ]]; then
-            GITTAG="${DOCKER_IMAGE}:$(echo $GITHUB_REF | sed 's|refs/tags/||g')_${RELEASE}-slim"
+            GITTAG="${DOCKER_IMAGE}:$(echo $GITHUB_REF | sed 's|refs/tags/||g')_${RELEASE}"
           fi
 
           if [ -n "${BRANCHTAG}" ] && [ -n "${GITTAG}" ]; then
@@ -431,7 +431,7 @@ jobs:
       - name: Switch
         id: Switch
         run: |
-          sed -i "s|FROM debian:.*|FROM debian:${RELEASE}-slim|g" Dockerfile
+          sed -i "s|FROM debian:.*|FROM debian:${RELEASE}|g" Dockerfile
 
       - name: Build
         uses: docker/build-push-action@v2
