--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,6 +93,7 @@ jobs:
             sed -i "/FROM .*/a LABEL base_image_build_date=\"$(date +'%Y-%m-%d %H:%M:%S')\"" Dockerfile
             if [ -f "CHANGELOG.md" ] ; then
               sed -i "/FROM .*/a LABEL base_git_changelog_version=\"$(head -n1 ./CHANGELOG.md | awk '{print $2}')\"" Dockerfile
+              mkdir -p install/assets/.changelogs ; cp CHANGELOG.md install/assets/.changelogs/${GITHUB_REPOSITORY/\//_}.md
             fi
 
             if [[ $GITHUB_REF == refs/tags/* ]]; then
@@ -107,7 +108,7 @@ jobs:
       - name: Switch
         id: Switch
         run: |
-          sed -i "s|FROM debian:.*|FROM debian:${RELEASE}|g" Dockerfile
+          sed -i "s|FROM docker.io/debian:.*|FROM docker.io/debian:${RELEASE}|g" Dockerfile
 
       - name: Build
         uses: docker/build-push-action@v2
@@ -201,6 +202,7 @@ jobs:
             sed -i "/FROM .*/a LABEL base_image_build_date=\"$(date +'%Y-%m-%d %H:%M:%S')\"" Dockerfile
             if [ -f "CHANGELOG.md" ] ; then
               sed -i "/FROM .*/a LABEL base_git_changelog_version=\"$(head -n1 ./CHANGELOG.md | awk '{print $2}')\"" Dockerfile
+              mkdir -p install/assets/.changelogs ; cp CHANGELOG.md install/assets/.changelogs/${GITHUB_REPOSITORY/\//_}.md
             fi
 
             if [[ $GITHUB_REF == refs/tags/* ]]; then
@@ -215,7 +217,7 @@ jobs:
       - name: Switch
         id: Switch
         run: |
-          sed -i "s|FROM debian:.*|FROM debian:${RELEASE}|g" Dockerfile
+          sed -i "s|FROM docker.io/debian:.*|FROM docker.io/debian:${RELEASE}|g" Dockerfile
 
       - name: Build
         uses: docker/build-push-action@v2
@@ -309,6 +311,7 @@ jobs:
             sed -i "/FROM .*/a LABEL base_image_build_date=\"$(date +'%Y-%m-%d %H:%M:%S')\"" Dockerfile
             if [ -f "CHANGELOG.md" ] ; then
               sed -i "/FROM .*/a LABEL base_git_changelog_version=\"$(head -n1 ./CHANGELOG.md | awk '{print $2}')\"" Dockerfile
+              mkdir -p install/assets/.changelogs ; cp CHANGELOG.md install/assets/.changelogs/${GITHUB_REPOSITORY/\//_}.md
             fi
 
             if [[ $GITHUB_REF == refs/tags/* ]]; then
@@ -323,7 +326,7 @@ jobs:
       - name: Switch
         id: Switch
         run: |
-          sed -i "s|FROM debian:.*|FROM debian:${RELEASE}|g" Dockerfile
+          sed -i "s|FROM docker.io/debian:.*|FROM docker.io/debian:${RELEASE}|g" Dockerfile
 
       - name: Build
         uses: docker/build-push-action@v2
@@ -417,6 +420,7 @@ jobs:
             sed -i "/FROM .*/a LABEL base_image_build_date=\"$(date +'%Y-%m-%d %H:%M:%S')\"" Dockerfile
             if [ -f "CHANGELOG.md" ] ; then
               sed -i "/FROM .*/a LABEL base_git_changelog_version=\"$(head -n1 ./CHANGELOG.md | awk '{print $2}')\"" Dockerfile
+              mkdir -p install/assets/.changelogs ; cp CHANGELOG.md install/assets/.changelogs/${GITHUB_REPOSITORY/\//_}.md
             fi
 
             if [[ $GITHUB_REF == refs/tags/* ]]; then
@@ -431,7 +435,7 @@ jobs:
       - name: Switch
         id: Switch
         run: |
-          sed -i "s|FROM debian:.*|FROM debian:${RELEASE}|g" Dockerfile
+          sed -i "s|FROM docker.io/debian:.*|FROM docker.io/debian:${RELEASE}|g" Dockerfile
 
       - name: Build
         uses: docker/build-push-action@v2
